# CommonLibSSE-NG

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg.json  xmake-extra.lua  xmake.lua
.github/workflows/: main_ci.yml  maintenance.yml
cmake/: CommonLibSSE.cmake  config.cmake.in  headerlist.cmake  sourcelist.cmake  testlist.cmake
include/: csv.h  csv.hpp
include/RE/: Offsets.h  Offsets_NiRTTI.h  Offsets_NiRTTI_VR.h  Offsets_RTTI.h  Offsets_RTTI_VR.h  Offsets_VR.h  Offsets_VR_NiRTTI.h  Offsets_VR_RTTI.h  Offsets_VTABLE.h  RTTI.h  Skyrim.h
include/RE/A/: AIProcess.h  AbsorbEffect.h  AbstractHeap.h  ActivateHandler.h  ActiveEffect.cpp  ActiveEffect.h  ActiveEffectReferenceEffectController.h  Actor.cpp  Actor.h  ActorEquipManager.h  ActorKnowledge.h  ActorMagicCaster.h  ActorMover.h  ActorState.h  ActorTargetCheck.h  ActorValueInfo.h  ActorValueList.h  ActorValueMeter.h  ActorValueOwner.h  AddCallbackVisitor.h  AlchemyItem.h  AlchemyMenu.h  AnimationFileManagerSingleton.h  Archive.h  ArmorRatingVisitor.h  ArmorRatingVisitorBase.h  ArrowProjectile.h  AsyncStream.h  Atmosphere.h  AttachAshPileFunctor.h  AttachLightHitEffectVisitor.h  AttachTechniqueInput.h  AttackAnimationArrayMap.h  AttackBlockHandler.h  AutoMoveHandler.h  ahkpCharacterProxy.h  ahkpWorld.h
include/RE/B/: BGSAbilityPerkEntry.h  BGSAcousticSpace.h  BGSAction.h  BGSAddToPlayerInventoryEvent.h  BGSAddonNode.h  BGSApparatus.h  BGSArtObject.h  BGSAssociationType.h  BGSAttackData.h  BGSAttackDataForm.h  BGSAttackDataMap.h  BGSBaseAlias.h  BGSBehaviorGraphModel.h  BGSBipedObjectForm.h  BGSBlockBashData.h  BGSBodyPartData.h  BGSCameraPath.h  BGSCameraShot.h  BGSCollisionLayer.h  BGSColorForm.h  BGSConstructibleObject.h  BGSCreatedObjectManager.h  BGSDebris.h  BGSDecalManager.h  BGSDecalNode.h  BGSDefaultObjectManager.h  BGSDestructibleObjectForm.h  BGSDialogueBranch.h  BGSDualCastData.h  BGSEncounterZone.h  BGSEntryPoint.h  BGSEntryPointFunction.h  BGSEntryPointFunctionData.h  BGSEntryPointFunctionDataActivateChoice.h  BGSEntryPointFunctionDataOneValue.h  BGSEntryPointFunctionDataSpellItem.h  BGSEntryPointFunctionDataText.h  BGSEntryPointPerkEntry.h  BGSEquipSlot.h  BGSEquipType.h  (+280 more)
include/RE/C/: Calendar.h  CalibrationOptionMenu.h  CharEvent.h  Character.h  Clouds.h  CodeTasklet.h  ColorUtil.h  CombatController.h  CombatGroup.h  CombatGroupDetectionListener.h  CombatInventory.h  CombatInventoryItem.h  CombatInventoryItemMagic.h  CombatInventoryItemPotion.h  CombatInventoryItemScroll.h  CombatInventoryItemShout.h  CombatInventoryItemStaff.h  CombatMagicCaster.h  CombatMagicCasterOffensive.h  CombatMagicCasterReanimate.h  CombatMagicCasterRestore.h  CombatMagicCasterTargetEffect.h  CombatManager.h  CombatObject.h  CombatState.h  CommandEffect.h  CommandTable.h  CompactingStore.h  CompiledScriptLoader.h  ConeProjectile.h  Console.h  ConsoleData.h  ConsoleNativeUIMenu.h  ConstructibleObjectMenu.h  ContainerMenu.h  ControlMap.h  CraftingMenu.h  CraftingSubMenu.h  CreationClubMenu.h  CreditsMenu.h  (+2 more)
include/RE/D/: DelayFunctor.h  DemoralizeEffect.h  DetectionListener.h  DetectionState.h  DevNull.h  DeviceConnectEvent.h  DialogueItem.h  DialogueMenu.h  DialoguePackage.h  DirectionHandler.h  DropObjectFunctor.h  DualValueModifierEffect.h
include/RE/E/: Effect.h  EffectSetting.cpp  EffectSetting.h  EnchantConstructMenu.h  EnchantmentItem.h  ErrorLogger.h  Explosion.h  ExtraAction.h  ExtraActivateLoopSound.h  ExtraActivateRef.h  ExtraActivateRefChildren.h  ExtraActorCause.h  ExtraAliasInstanceArray.h  ExtraAlphaCutoff.h  ExtraAmmo.h  ExtraAnimGraphManager.h  ExtraAnimNoteReceiver.h  ExtraAnimationSequencer.h  ExtraAshPileRef.h  ExtraAttachRef.h  ExtraAttachRefChildren.h  ExtraAttachedArrows3D.h  ExtraBadPosition.h  ExtraBiped.h  ExtraCachedScale.h  ExtraCanTalkToPlayer.h  ExtraCannotWear.h  ExtraCell3D.h  ExtraCellAcousticSpace.h  ExtraCellGrassData.h  ExtraCellImageSpace.h  ExtraCellMusicType.h  ExtraCellSkyRegion.h  ExtraCellWaterEnvMap.h  ExtraCellWaterType.h  ExtraCharge.h  ExtraCollisionData.h  ExtraCombatStyle.h  ExtraContainerChanges.h  ExtraCount.h  (+133 more)
include/RE/F/: FOCollisionListener.h  FORM_ENUM_STRING.h  FaderMenu.h  FastTravelConfirmCallback.h  FavoritesHandler.h  FavoritesMenu.h  FindMaxMagnitudeVisitor.h  FirstPersonState.h  FixedStrings.h  FlameProjectile.h  FormTypes.h  FreeCameraState.h  FxDelegate.h  FxDelegateHandler.h
include/RE/G/: GASEnvironment.h  GASGlobalContext.h  GArrayBase.h  GAtomic.h  GFxEvent.h  GFxExternalInterface.h  GFxFunctionHandler.h  GFxImageLoader.h  GFxLoadUpdateSync.h  GFxLog.h  GFxMovieDataDef.h  GFxMovieDef.h  GFxResourceWeakLib.h  GFxState.h  GFxTask.h  GFxTranslator.h  GFxValue.h  GHashNode.h  GHashSetBase.h  GImage.h  GImageInfo.h  GImageInfoBase.h  GImageInfoBaseImpl.h  GMatrix3D.h  GMemory.h  GMemoryHeap.h  GRefCountBaseStatImpl.h  GRefCountImpl.h  GRefCountImplCore.h  GString.cpp  GSysAllocBase.h  GSysAllocPaged.h  GameSettingCollection.h  GiftMenu.h  GlobalLocations.h  GlobalPaths.h  GrenadeProjectile.h  GridArray.h  GridCellArray.h
include/RE/H/: HUDChargeMeter.h  HUDData.h  HUDMenu.h  HUDMeter.h  HUDNotifications.h  HUDObject.h  HandlePolicy.h  Hazard.h  HeldStateHandler.h  HighProcessData.h  HitData.h  (+81 more)
include/REL/: ID.h  Module.h  Offset.h  Relocation.h  Version.h
include/SKSE/: API.cpp  InputMap.h  Interfaces.h  Logger.cpp  RegistrationMap.h  RegistrationMapUnique.h  RegistrationSetUnique.h  SKSE.h  Trampoline.h  Version.h
port/: xmake.lua
scripts/: cmake_generate.py
src/REL/: ID.cpp  Module.cpp  Relocation.cpp
src/SKSE/: API.cpp  InputMap.cpp  Logger.cpp  RegistrationMap.cpp  RegistrationMapUnique.cpp  RegistrationSet.cpp  RegistrationSetUnique.cpp  Trampoline.cpp  Translation.cpp
tests/: Main.cpp
tests/REL/: Relocation.test.cpp
tests/SKSE/: Interfaces.test.cpp  Trampoline.test.cpp
(+619 files in other folders)
